[add] specs section + fix buysection + footer

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -3,7 +3,7 @@
 ---
 
 <section
-  class="mb-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row"
+  class="mb-10 pt-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row"
   id="contact"
 >
   <h1>Contact</h1>
