--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@
   id="home"
 >
   <div class="mt-10 xl:mt-12">
-    <h3>FP</h3>
+    <img src="../../public/fplogo.png" alt="" class="w-12" />
   </div>
 
   <div class="text-center">
@@ -28,6 +28,6 @@
 
   <div class="flex mb-12 opacity-75 items-center flex-col">
     <p class="text-sm">Learn more about what I do</p>
-    <a href="#projects"> <i class="text-3xl fa-solid fa-angles-down"></i></a>
+    <a href="#about"> <i class="text-3xl fa-solid fa-angles-down"></i></a>
   </div>
 </section>
