--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,10 +1,81 @@
 ---
-const {} = Astro.props;
+import { allTechs } from '../data/stack.js';
 ---
 
 <section
-  class="mb-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row"
+  class="pt-10 mb-10 flex flex-col items-center justify-center gap-20"
   id="about"
 >
-  <h1>About</h1>
+  <h2 class="font-mono text-3xl md:text-4xl tracking-wide text-cyan-200">
+    About Me
+  </h2>
+
+  <div class="flex flex-col justify-center items-center lg:flex-row gap-10">
+    <div>
+      <p>
+        I'm a developer who embarked on their journey in October 2023 as a
+        self-taught enthusiast. I later expanded my knowledge by completing a
+        bootcamp at UpgradeHub, with a specific focus on front-end development.
+        During my initial professional experience, I had the opportunity to work
+        with NextJS and also gained valuable experience with PHP and its Laravel
+        framework. This exposure enabled me to grasp the inner workings of
+        backend development and databases, which further enriched my learning
+        experience. Dedication and enthusiasm have been with me from the
+        beginning, and I view them as my core foundations.
+      </p>
+    </div>
+
+    <img
+      class="rounded-full h-64 w-64"
+      src="../../public/mainimg.jpg"
+      alt="Fede Parrilla"
+    />
+  </div>
+
+  <div class="flex flex-row flex-wrap items-center justify-center gap-4">
+    {
+      allTechs.map((tech) => {
+        return (
+          <div class="flex flex-col gap-2 items-center justify-center">
+            <img class="h-8 w-8" src={tech.img} alt={tech.name} />
+          </div>
+        );
+      })
+    }
+  </div>
+
+  <ol class="relative border-l border-gray-700">
+    <li class="mb-10 ml-4">
+      <div
+        class="absolute w-3 h-3 rounded-full mt-1.5 -left-1.5 borderborder-gray-900 bg-gray-700"
+      >
+      </div>
+      <time class="mb-1 text-sm font-normal leading-none text-gray-500"
+        >August 2023 - Present
+      </time>
+      <h3 class="text-lg font-semibold text-white">
+        Full-Stack Developer in Sitelicon Ecommerce Services
+      </h3>
+      <p class="mb-4 text-base font-normal text-gray-400">
+        Get access to over 20+ pages including a dashboard layout, charts,
+        kanban board, calendar, and pre-order E-commerce & Marketing pages.
+      </p>
+    </li>
+    <li class="mb-10 ml-4">
+      <div
+        class="absolute w-3 h-3 rounded-full mt-1.5 -left-1.5 borderborder-gray-900 bg-gray-700"
+      >
+      </div>
+      <time class="mb-1 text-sm font-normal leading-none text-gray-500"
+        >March 2023 - July 2023</time
+      >
+      <h3 class="text-lg font-semibold text-white">
+        Front-End Development Bootcamp in UpgradeHub
+      </h3>
+      <p class="mb-4 text-base font-normal text-gray-400">
+        Get access to over 20+ pages including a dashboard layout, charts,
+        kanban board, calendar, and pre-order E-commerce & Marketing pages.
+      </p>
+    </li>
+  </ol>
 </section>
