--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,103 +1,21 @@
 ---
-const allProjects = [
-  {
-    name: 'RecoFM',
-    img: '../../public/projects/RecoFM.png',
-    description:
-      'Responsive SPA developed with React. Animations powered by the Framer Motion library. BEM methodology for proper and organised styling. Random data block generator. Routing implemented using React Router DOM.',
-    tech: ['../../public/icons/react.svg', '../../public/icons/css3.svg'],
-  },
-  {
-    name: 'BookFinder',
-    img: '../../public/projects/BookFinder.png',
-    description:
-      'SPA developed with React with responsive design, registration, login, and CSS using BEM methodology. It leverages useState, useEffect, useContext, and useParams hooks for functionality and Axios for requests and modifications.',
-    tech: ['../../public/icons/react.svg', '../../public/icons/css3.svg'],
-  },
-  {
-    name: 'DestinosAR',
-    img: '../../public/projects/DestinosAR.png',
-    description:
-      'SPA developed with Angular with comprehensive CRUD, complete with user registration and login features. It leverages guards, interceptors, switchMap, and reactive forms. Additionally, it employs pipes to handle data filtering.',
-    tech: [
-      '../../public/icons/angular.svg',
-      '../../public/icons/typescript.svg',
-      '../../public/icons/sass.svg',
-    ],
-  },
-];
+import { allProjects } from '../data/projects.js';
 ---
 
 <section
-  class="pt-8 mb-10 flex flex-col items-center justify-center gap-20"
+  class="pt-8 mb-14 flex flex-col items-center justify-center gap-20"
   id="projects"
 >
-  <h2 class="font-mono text-3xl md:text-4xl tracking-wide">Projects</h2>
-  <div class="grid lg:grid-cols-3 gap-4 justify-center">
+  <h2 class="font-mono text-3xl md:text-4xl tracking-wide text-cyan-200">
+    Projects
+  </h2>
+  <div class="grid lg:grid-cols-3 gap-5 justify-center">
     {
       allProjects.map((project) => (
-        <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+        <div class="max-w-sm shadow">
           <a href="#">
-            <img class="rounded-t-lg" src={project.img} alt={project.name} />
+            <img class="rounded-xl" src={project.img} alt={project.name} />
           </a>
-          <div class="p-5">
-            <a href="#">
-              <h5 class="mb-2 text-2x1 text-gray-900 font-bold tracking-tight">
-                {project.name}
-              </h5>
-            </a>
-            <p class="mb-3 font-normal text-gray-700">{project.description}</p>
-            <div class="flex gap-2 text-gray-950 text-4xl pb-4">
-              {project.tech.map((tech) => {
-                return <img src={tech} class="h-10 w-10" />;
-              })}
-            </div>
-
-            <div class="flex justify-between">
-              <a
-                href="#"
-                class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-gray-950 rounded-lg hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-cyan-200"
-              >
-                View More
-                <svg
-                  class="w-3.5 h-3.5 ml-2"
-                  aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 14 10"
-                >
-                  <path
-                    stroke="currentColor"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M1 5h12m0 0L9 1m4 4L9 9"
-                  />
-                </svg>
-              </a>
-              <a
-                href="#"
-                class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-gray-950 rounded-lg hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-cyan-200"
-              >
-                View Code
-                <svg
-                  class="w-3.5 h-3.5 ml-2"
-                  aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 14 10"
-                >
-                  <path
-                    stroke="currentColor"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M1 5h12m0 0L9 1m4 4L9 9"
-                  />
-                </svg>
-              </a>
-            </div>
-          </div>
         </div>
       ))
     }
