--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,16 +18,15 @@ const { title } = Astro.props;
       crossorigin="anonymous"></script>
   </head>
   <body
-    class="mx-auto max-w-screen-lg px-5 font-sans text-white bg-gray-950 xs:text-[16px] md:text-[18px]"
+    class="mx-auto max-w-screen-lg px-5 font-sans text-white bg-gradient-to-r from-gray-950 to-gray-900 xs:text-[16px] md:text-[18px]"
   >
     <NavBar />
     <slot />
     <Footer />
+    <style is:global>
+      img {
+        content-visibility: auto;
+      }
+    </style>
   </body>
 </html>
-
-<style is:global>
-  img {
-    content-visibility: auto;
-  }
-</style>
