[update] hero + projects

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -21,11 +21,9 @@ const menuItems = [
 
 <section class="pt-2">
   <nav class="flex items-center justify-center">
-    <!-- <div>
-      <h3 class="font-mono">FP ~</h3>
-    </div> -->
-
-    <ul class="flex flex-row items-center justify-center gap-12">
+    <ul
+      class="flex flex-row items-center justify-center gap-8 md:gap-6 font-mono text-md uppercase text-cyan-100"
+    >
       {
         menuItems.map((item) => {
           return (
@@ -35,7 +33,6 @@ const menuItems = [
           );
         })
       }
-      <!-- <button>Download CV</button> -->
     </ul>
   </nav>
 </section>
