--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,30 +6,20 @@ import { allTechs } from '../data/stack.js';
   class="pt-10 mb-10 flex flex-col items-center justify-center gap-20"
   id="about"
 >
-  <h2 class="font-mono text-3xl md:text-4xl tracking-wide text-cyan-200">
-    About Me
+  <h2
+    class="font-mono text-2xl md:text-3xl tracking-wide text-cyan-200 uppercase"
+  >
+    | About Me 🧔🏻
   </h2>
 
   <div class="flex flex-col justify-center items-center lg:flex-row gap-10">
-    <div>
-      <p>
-        I'm a developer who embarked on their journey in October 2023 as a
-        self-taught enthusiast. I later expanded my knowledge by completing a
-        bootcamp at UpgradeHub, with a specific focus on front-end development.
-        During my initial professional experience, I had the opportunity to work
-        with NextJS and also gained valuable experience with PHP and its Laravel
-        framework. This exposure enabled me to grasp the inner workings of
-        backend development and databases, which further enriched my learning
-        experience. Dedication and enthusiasm have been with me from the
-        beginning, and I view them as my core foundations.
-      </p>
-    </div>
-
-    <img
-      class="rounded-full h-64 w-64"
-      src="../../public/mainimg.jpg"
-      alt="Fede Parrilla"
-    />
+    <p>
+      I'm a developer who embarked on their journey in October 2022 as a
+      self-taught enthusiast. I later expanded my knowledge by completing a
+      bootcamp at UpgradeHub, with a specific focus on front-end development.
+      Dedication and enthusiasm have been with me from the beginning, and I view
+      them as my core foundations.
+    </p>
   </div>
 
   <div class="flex flex-row flex-wrap items-center justify-center gap-4">
