--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -3,8 +3,62 @@
 ---
 
 <section
-  class="mb-10 pt-10 flex flex-col items-center justify-center lg:mb-0 lg:h-screen lg:flex-row"
+  class="mb-10 pt-10 flex flex-col items-center justify-center gap-20"
   id="contact"
 >
-  <h1>Contact</h1>
+  <h2
+    class="font-mono text-2xl md:text-3xl tracking-wide text-cyan-200 uppercase"
+  >
+    | Contact 🚀
+  </h2>
+  <section>
+    <div class="px-4 mx-auto max-w-screen-md w-screen">
+      <form action="#" class="space-y-8">
+        <div>
+          <label
+            for="email"
+            class="block mb-2 text-sm font-medium text-gray-300"
+            >Your email</label
+          >
+          <input
+            type="email"
+            id="email"
+            class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5"
+            placeholder="name@flowbite.com"
+            required
+          />
+        </div>
+        <div>
+          <label
+            for="subject"
+            class="block mb-2 text-sm font-medium text-gray-300">Subject</label
+          >
+          <input
+            type="text"
+            id="subject"
+            class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500"
+            placeholder="Let us know how we can help you"
+            required
+          />
+        </div>
+        <div class="sm:col-span-2">
+          <label
+            for="message"
+            class="block mb-2 text-sm font-medium text-gray-300"
+            >Your message</label
+          >
+          <textarea
+            id="message"
+            rows="6"
+            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500"
+            placeholder="Leave a comment..."></textarea>
+        </div>
+        <button
+          type="submit"
+          class="py-3 px-5 text-sm font-medium text-center text-cyan-100 rounded-lg bg-gray-950 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300"
+          >Send message</button
+        >
+      </form>
+    </div>
+  </section>
 </section>
