--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,18 +3,21 @@
 ---
 
 <section
-  class="mb-10 flex h-screen items-center justify-around sm:justify-between flex-col"
+  class="flex h-screen items-center justify-around flex-col py-10"
   id="home"
 >
-  <div class="mt-10 xl:mt-12">
-    <img src="../../public/fplogo.png" alt="" class="w-12" />
+  <div>
+    <img
+      src="/mainimg.jpg"
+      alt=""
+      class="rounded-full h-52 w-52 md:h-64 md:w-64"
+    />
   </div>
 
   <div class="text-center">
     <h1 class="font-mono text-3xl xl:text-5xl">
       Hi there! 👋🏻 I'm
-      <span class="text-cyan-200">Fede Parrilla</span>,<br /> a Software
-      Developer
+      <span class="text-cyan-200">Fede Parrilla</span>,<br /> a Software Developer
     </h1>
     <p class="text-cyan-100 font-thin text-base tracking-wide">
       Crafting quality solutions with dedication and enthusiasm
@@ -26,8 +29,8 @@
     </div>
   </div>
 
-  <div class="flex mb-12 opacity-75 items-center flex-col">
-    <p class="text-sm">Learn more about what I do</p>
-    <a href="#about"> <i class="text-3xl fa-solid fa-angles-down"></i></a>
+  <div class="flex opacity-50 items-center flex-col text-cyan-200 pt-5">
+    <p class="text-sm">Scroll down to know a bit more about me</p>
+    <a href="#about"><i class="text-md fa-solid fa-angles-down"></i></a>
   </div>
 </section>
