--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,18 +6,64 @@ import { allProjects } from '../data/projects.js';
   class="pt-8 mb-14 flex flex-col items-center justify-center gap-20"
   id="projects"
 >
-  <h2 class="font-mono text-3xl md:text-4xl tracking-wide text-cyan-200">
-    Projects
+  <h2
+    class="font-mono text-2xl md:text-3xl tracking-wide text-cyan-200 uppercase"
+  >
+    | Projects 🚀
   </h2>
+
   <div class="grid lg:grid-cols-3 gap-5 justify-center">
     {
       allProjects.map((project) => (
-        <div class="max-w-sm shadow">
-          <a href="#">
-            <img class="rounded-xl" src={project.img} alt={project.name} />
-          </a>
+        <div class="wrapper">
+          <div class="max-w-sm shadow image">
+            <a href="#">
+              <img class="rounded-xl" src={project.img} alt={project.name} />
+              <div class="content rounded-xl">
+                <h3 class="text-2xl font-semibold">{project.name}</h3>
+                <div class="flex flex-row gap-5">
+                  {project.tech.map((tech) => (
+                    <img class="w-10" src={tech} alt="Technologies" />
+                  ))}
+                </div>
+              </div>
+            </a>
+          </div>
         </div>
       ))
     }
   </div>
 </section>
+
+<style>
+  .image {
+    position: relative;
+  }
+
+  .content {
+    position: absolute;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    transition: 0.6s;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+  }
+
+  .content:hover {
+    opacity: 1;
+  }
+
+  @media (max-width: 1280px) {
+    .content {
+      opacity: 0.9;
+    }
+  }
+</style>
