--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
       crossorigin="anonymous"></script>
   </head>
   <body
-    class="mx-auto max-w-screen-lg px-5 font-sans text-white bg-gradient-to-r from-gray-950 to-gray-900 xs:text-[16px] md:text-[18px]"
+    class="mx-auto max-w-screen-lg px-5 font-sans text-white bg-gradient-to-b from-gray-950 to-gray-900 xs:text-[16px] md:text-[18px]"
   >
     <NavBar />
     <slot />
