[add] portfolio route

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,7 +8,7 @@
 >
   <div>
     <img
-      src="/mainimg.jpg"
+      src="portfolio/mainimg.jpg"
       alt=""
       class="rounded-full h-52 w-52 md:h-64 md:w-64"
     />
