--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -6,11 +6,7 @@
   class="mb-10 pt-10 flex flex-col items-center justify-center gap-20"
   id="contact"
 >
-  <h2
-    class="font-mono text-2xl md:text-3xl tracking-wide text-cyan-200 uppercase"
-  >
-    | Contact 🚀
-  </h2>
+  <h2 class="font-mono text-2xl text-cyan-200">💬 Contact</h2>
   <section>
     <div class="px-4 mx-auto max-w-screen-md w-screen">
       <form action="#" class="space-y-8">
