--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,33 +3,27 @@
 ---
 
 <section
-  class="flex h-screen items-center justify-around flex-col py-10"
+  class="flex items-center justify-around flex-col py-10 mt-1 md:mt-14 gap-10"
   id="home"
 >
-  <div>
+  <h1 class="font-mono text-2xl xl:text-4xl">
+    Hi! 👋🏻 I'm
+    <span class="text-cyan-200">Fede Parrilla</span>,<br /> a Software Developer
+  </h1>
+
+  <div class="flex flex-col justify-center items-center lg:flex-row gap-10">
+    <p>
+      I'm a developer who embarked on their journey in October 2022 as a
+      self-taught enthusiast. I later expanded my knowledge by completing a
+      bootcamp at UpgradeHub, with a specific focus on front-end development.
+      Dedication and enthusiasm have been with me from the beginning, and I view
+      them as my core foundations.
+    </p>
+
     <img
       src="/portfolio/mainimg.jpg"
       alt=""
       class="rounded-full h-52 w-52 md:h-64 md:w-64"
     />
-  </div>
-
-  <div class="text-center">
-    <h1 class="font-mono text-3xl xl:text-5xl">
-      Hi there! 👋🏻 I'm
-      <span class="text-cyan-200">Fede Parrilla</span>,<br /> a Software Developer
-    </h1>
-    <p class="text-cyan-100 font-thin text-base tracking-wide">
-      Crafting quality solutions with dedication and enthusiasm
-    </p>
-
-    <div class="mt-4 flex gap-3 items-center justify-center">
-      <a href=""><i class="text-5xl fa-brands fa-linkedin"></i></a>
-      <a href=""><i class="text-5xl fa-brands fa-github"></i></a>
-    </div>
-  </div>
-
-  <div class="flex opacity-50 items-center flex-col text-cyan-200 pt-5">
-    <a href="#about"><i class="text-md fa-solid fa-angles-down"></i></a>
   </div>
 </section>
