--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -20,9 +20,10 @@ const menuItems = [
 ---
 
 <section class="pt-2">
-  <nav class="flex items-center justify-center">
+  <nav class="flex items-center justify-between">
+    <img src="/portfolio/fplogo.png" class="h-6 w-6 object-contain" />
     <ul
-      class="flex flex-row items-center justify-center gap-8 md:gap-6 font-mono text-md uppercase text-cyan-100"
+      class="flex flex-row items-center justify-center gap-8 md:gap-6 text-[1rem] font-mono uppercase text-cyan-100"
     >
       {
         menuItems.map((item) => {
