--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -6,11 +6,7 @@ import { allProjects } from '../data/projects.js';
   class="pt-8 mb-14 flex flex-col items-center justify-center gap-20"
   id="projects"
 >
-  <h2
-    class="font-mono text-2xl md:text-3xl tracking-wide text-cyan-200 uppercase"
-  >
-    | Projects 🚀
-  </h2>
+  <h2 class="font-mono text-2xl text-cyan-200">🚀 Projects</h2>
 
   <div class="grid lg:grid-cols-3 gap-5 justify-center">
     {
