[update] about x work xp | add img to contact section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,23 +3,32 @@
 ---
 
 <section
-  class="flex items-center justify-around flex-col py-10 mt-1 md:mt-14 gap-10"
+  class="flex justify-around flex-col py-10 mt-1 md:mt-10 gap-10"
   id="home"
 >
-  <h1 class="font-mono text-2xl xl:text-4xl">
+  <h1 class="font-mono text-2xl xl:text-4xl text-center lg:text-left">
     Hi! 👋🏻 I'm
     <span class="text-cyan-200">Fede Parrilla</span>,<br /> a Software Developer
   </h1>
 
   <div class="flex flex-col justify-center items-center lg:flex-row gap-10">
-    <p>
-      I'm a developer who embarked on their journey in October 2022 as a
-      self-taught enthusiast. I later expanded my knowledge by completing a
-      bootcamp at UpgradeHub, with a specific focus on front-end development.
-      Dedication and enthusiasm have been with me from the beginning, and I view
-      them as my core foundations.
-    </p>
+    <div class="flex flex-col gap-6 items-center lg:items-start">
+      <p>
+        I'm a developer who embarked on their journey in October 2022 as a
+        self-taught enthusiast. I later expanded my knowledge by completing a
+        bootcamp at UpgradeHub, with a specific focus on front-end development.
+        Dedication and enthusiasm have been with me from the beginning, and I
+        view them as my core foundations.
+      </p>
 
+      <div
+        class="flex flex-row w-12 gap-4 items-center justify-center lg:items-start lg:justify-start"
+      >
+        <img src="/portfolio/github.svg" />
+        <img src="/portfolio/linkedin.svg" />
+        <img src="/portfolio/cv.svg" />
+      </div>
+    </div>
     <img
       src="/portfolio/mainimg.jpg"
       alt=""
