--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Hero from '../components/Hero.astro';
 import Projects from '../components/Projects.astro';
-import About from '../components/About.astro';
+import WorkExperience from '../components/WorkExperience.astro';
 import Contact from '../components/Contact.astro';
 import Layout from '../layouts/Layout.astro';
 ---
@@ -9,7 +9,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Welcome to Astro.">
   <main class="">
     <Hero />
-    <About />
+    <WorkExperience />
     <Projects />
     <Contact />
   </main>
