--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,13 +2,14 @@
 
 ---
 
-<section
-  class="mb-10 pt-10 flex flex-col items-center justify-center gap-20"
-  id="contact"
->
-  <h2 class="font-mono text-2xl text-cyan-200">💬 Contact</h2>
-  <section>
-    <div class="px-4 mx-auto max-w-screen-md w-screen">
+<section class="pt-5 mb-10 flex flex-col gap-16" id="contact">
+  <h2 class="font-mono text-2xl text-cyan-200 text-center lg:text-start">
+    💬 Contact
+  </h2>
+  <section
+    class="flex flex-col items-center lg:flex-row gap-12 justify-between xl:gap-20"
+  >
+    <div class="w-3/4 md:w-1/2">
       <form action="#" class="space-y-8">
         <div>
           <label
@@ -55,6 +56,18 @@
           >Send message</button
         >
       </form>
+    </div>
+
+    <div
+      class="flex flex-row xl:flex-col w-12 gap-10 pb-16 items-center justify-center"
+    >
+      <img src="/portfolio/github.svg" />
+      <img src="/portfolio/linkedin.svg" />
+      <img src="/portfolio/cv.svg" />
+    </div>
+
+    <div>
+      <img src="/portfolio/codinganim.png" class="w-64 pb-14 hidden xl:block" />
     </div>
   </section>
 </section>
