--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,10 +1,13 @@
 ---
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
 
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <section class="pt-5 mb-10 flex flex-col gap-16" id="contact">
   <h2 class="font-mono text-2xl text-cyan-200 text-center lg:text-start">
-    💬 Contact
+    💬 {t('contact.title')}
   </h2>
   <section
     class="flex flex-col items-center lg:flex-row gap-12 justify-between xl:gap-20"
@@ -15,26 +18,27 @@
           <label
             for="email"
             class="block mb-2 text-sm font-medium text-gray-300"
-            >Your email</label
+            >{t('contact.email')}</label
           >
           <input
             type="email"
             id="email"
             class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5"
-            placeholder="name@flowbite.com"
+            placeholder={t('contact.placeholder.email')}
             required
           />
         </div>
         <div>
           <label
             for="subject"
-            class="block mb-2 text-sm font-medium text-gray-300">Subject</label
+            class="block mb-2 text-sm font-medium text-gray-300"
+            >{t('contact.subject')}</label
           >
           <input
             type="text"
             id="subject"
             class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500"
-            placeholder="Let us know how we can help you"
+            placeholder={t('contact.placeholder.subject')}
             required
           />
         </div>
@@ -42,18 +46,18 @@
           <label
             for="message"
             class="block mb-2 text-sm font-medium text-gray-300"
-            >Your message</label
+            >{t('contact.message')}</label
           >
           <textarea
             id="message"
             rows="6"
             class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500"
-            placeholder="Leave a comment..."></textarea>
+            placeholder={t('contact.placeholder.message')}></textarea>
         </div>
         <button
           type="submit"
           class="py-3 px-5 text-sm font-medium text-center text-cyan-100 rounded-lg bg-gray-950 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300"
-          >Send message</button
+          >{t('contact.submit')}</button
         >
       </form>
     </div>
