--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,16 +1,19 @@
 ---
+import { getLangFromUrl } from '../i18n/utils';
 import Footer from '../components/Footer.astro';
 import NavBar from '../components/NavBar.astro';
+
+const lang = getLangFromUrl(Astro.url);
 const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="scroll-smooth">
+<html lang={lang} class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="portfolio/favicon.svg" />
+    <link rel="icon" href="/portfolio/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script
