--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 
 ---
 
-<section class="flex items-center justify-center mb-3">
-  <h3 class="text-sm">Fede Parrilla 2024</h3>
+<section class="flex items-center justify-center mb-2">
+  <h3 class="font-mono text-sm text-cyan-50">Fede Parrilla 2024</h3>
 </section>
