--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,8 @@
 ---
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
 
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <section
@@ -7,18 +10,14 @@
   id="home"
 >
   <h1 class="font-mono text-2xl xl:text-4xl text-center lg:text-left">
-    Hi! 👋🏻 I'm
-    <span class="text-cyan-200">Fede Parrilla</span>,<br /> a Software Developer
+    {t('hero.hello')}
+    <span class="text-cyan-200">Fede Parrilla</span>, <br />{t('hero.job')}
   </h1>
 
   <div class="flex flex-col justify-center items-center lg:flex-row gap-10">
     <div class="flex flex-col gap-6 items-center lg:items-start">
       <p>
-        I'm a developer who embarked on their journey in October 2022 as a
-        self-taught enthusiast. I later expanded my knowledge by completing a
-        bootcamp at UpgradeHub, with a specific focus on front-end development.
-        Dedication and enthusiasm have been with me from the beginning, and I
-        view them as my core foundations.
+        {t('hero.bio')}
       </p>
 
       <div
