--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -6,7 +6,7 @@ import Contact from '../../components/Contact.astro';
 import Layout from '../../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Fede Parrilla">
   <main class="">
     <Hero />
     <WorkExperience />
