--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
 import { getLangFromUrl } from '../i18n/utils';
-import favicon from '../public/favicon.ico';
 import Footer from '../components/Footer.astro';
 import NavBar from '../components/NavBar.astro';
 
@@ -14,7 +13,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href={favicon} />
+    <link rel="icon" href="favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <script
