--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -56,7 +56,7 @@ const flags = [
         {
           Object.entries(languages).map(([lang, label]) => (
             <li>
-              <a href={`/${lang}`}>
+              <a href={`/portfolio/${lang}`}>
                 <img
                   src={flags.find(
                     (flag) => flag.name.toLowerCase() === label.toLowerCase()
