--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,1 @@
----
-import Hero from '../components/Hero.astro';
-import Projects from '../components/Projects.astro';
-import WorkExperience from '../components/WorkExperience.astro';
-import Contact from '../components/Contact.astro';
-import Layout from '../layouts/Layout.astro';
----
-
-<Layout title="Fede Parrilla">
-  <main class="">
-    <Hero />
-    <WorkExperience />
-    <Projects />
-    <Contact />
-  </main>
-</Layout>
+<meta http-equiv="refresh" content="0;url=/portfolio/en" />
