--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,9 +23,9 @@ const t = useTranslations(lang);
       <div
         class="flex flex-row w-12 gap-4 items-center justify-center lg:items-start lg:justify-start"
       >
-        <img src="/portfolio/github.svg" />
-        <img src="/portfolio/linkedin.svg" />
-        <img src="/portfolio/cv.svg" />
+        <i class="fa-brands fa-github text-[2.7rem]"></i>
+        <i class="fa-brands fa-linkedin text-[2.7rem]"></i>
+        <i class="fa-regular fa-file text-[2.7rem]"></i>
       </div>
     </div>
     <img
