--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,73 +5,27 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<section class="pt-5 mb-10 flex flex-col gap-16" id="contact">
+<!-- <section class="pt-5 mb-10 flex flex-col gap-16" id="contact">
   <h2 class="font-mono text-2xl text-cyan-200 text-center lg:text-start">
     💬 {t('contact.title')}
   </h2>
   <section
     class="flex flex-col items-center lg:flex-row gap-12 justify-between xl:gap-20"
   >
-    <div class="w-3/4 md:w-1/2">
-      <form action="#" class="space-y-8">
-        <div>
-          <label
-            for="email"
-            class="block mb-2 text-sm font-medium text-gray-300"
-            >{t('contact.email')}</label
-          >
-          <input
-            type="email"
-            id="email"
-            class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5"
-            placeholder={t('contact.placeholder.email')}
-            required
-          />
-        </div>
-        <div>
-          <label
-            for="subject"
-            class="block mb-2 text-sm font-medium text-gray-300"
-            >{t('contact.subject')}</label
-          >
-          <input
-            type="text"
-            id="subject"
-            class="block p-3 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-sm focus:ring-primary-500 focus:border-primary-500"
-            placeholder={t('contact.placeholder.subject')}
-            required
-          />
-        </div>
-        <div class="sm:col-span-2">
-          <label
-            for="message"
-            class="block mb-2 text-sm font-medium text-gray-300"
-            >{t('contact.message')}</label
-          >
-          <textarea
-            id="message"
-            rows="6"
-            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg shadow-sm border border-gray-300 focus:ring-primary-500 focus:border-primary-500"
-            placeholder={t('contact.placeholder.message')}></textarea>
-        </div>
-        <button
-          type="submit"
-          class="py-3 px-5 text-sm font-medium text-center text-cyan-100 rounded-lg bg-gray-950 sm:w-fit hover:bg-primary-800 focus:ring-4 focus:outline-none focus:ring-primary-300"
-          >{t('contact.submit')}</button
-        >
-      </form>
+    <div>
+      <div><i class="fa-regular fa-envelope"></i><h3>Mail:</h3></div>
+      <div><i class="fa-regular fa-phone"></i><h3>Teléfono:</h3></div>
     </div>
-
     <div
       class="flex flex-row xl:flex-col w-12 gap-10 pb-16 items-center justify-center"
     >
-      <img src="/portfolio/github.svg" />
-      <img src="/portfolio/linkedin.svg" />
-      <img src="/portfolio/cv.svg" />
+      <i class="fa-brands fa-github text-[2.7rem]"></i>
+      <i class="fa-brands fa-linkedin text-[2.7rem]"></i>
+      <i class="fa-regular fa-file text-[2.7rem]"></i>
     </div>
 
     <div>
       <img src="/portfolio/codinganim.png" class="w-64 pb-14 hidden xl:block" />
     </div>
   </section>
-</section>
+</section> -->
