--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,6 @@
 
 ---
 
-<section class="flex items-center justify-center mb-2">
+<section class="flex items-center justify-center mt-20 mb-5">
   <h3 class="font-mono text-sm text-cyan-50">Fede Parrilla 2024</h3>
 </section>
