--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -1,26 +1,16 @@
 ---
 import { getLangFromUrl, useTranslations } from '../i18n/utils';
-import { allTechs } from '../data/stack.js';
+import Skills from './Skills.astro';
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
 <section class="pt-5 mb-10 flex flex-col gap-16" id="work-experience">
-  <div class="flex flex-row flex-wrap items-center justify-center gap-4">
-    {
-      allTechs.map((tech) => {
-        return (
-          <div class="flex flex-col gap-2 items-center justify-center">
-            <img class="h-8 w-8" src={tech.img} alt={tech.name} />
-          </div>
-        );
-      })
-    }
-  </div>
+  <Skills />
 
   <h2 class="font-mono text-2xl text-cyan-200 text-center lg:text-start">
-    🚀 {t('work.title')}
+    💼 {t('work.title')}
   </h2>
 
   <div>
@@ -64,7 +54,7 @@ const t = useTranslations(lang);
         <h3 class="text-lg font-semibold text-white">
           {t('study.title')}
         </h3>
-        <p class="mb-4 text-base font-normal text-gray-400">
+        <p class="mb-4 text-base font-normal text-gray-300">
           {t('study.description')}
         </p>
       </li>
