[update] skills section order

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -11,6 +11,10 @@ const menuItems = [
     link: '#home',
   },
   {
+    name: t('nav.work'),
+    link: '#work-experience',
+  },
+  {
     name: t('nav.projects'),
     link: '#projects',
   },
