--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,15 +1,28 @@
 ---
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
 import { allTechs } from '../data/stack.js';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
-<div class="flex flex-row flex-wrap items-center justify-center gap-4">
-  {
-    allTechs.map((tech) => {
-      return (
-        <div class="flex flex-col gap-2 items-center justify-center">
-          <img class="h-8 w-8" src={tech.img} alt={tech.name} />
-        </div>
-      );
-    })
-  }
-</div>
+<section class="pt-10 mb-10 flex flex-col gap-16" id="skills">
+  <h2 class="font-mono text-2xl text-cyan-200 text-center lg:text-start">
+    ⚒️ {t('skills.title')}
+  </h2>
+
+  <div class="flex flex-row flex-wrap gap-4 justify-center lg:justify-start">
+    {
+      allTechs.map((tech) => {
+        return (
+          <div
+            class={`${tech.class} flex flex-row text-sm items-center gap-1 border-gray-200 rounded-lg px-3 py-[0.20rem] cursor-default`}
+          >
+            <img src={tech.img} class="w-5" />
+            <p>{tech.name}</p>
+          </div>
+        );
+      })
+    }
+  </div>
+</section>
