--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -2,6 +2,7 @@
 import Hero from '../../components/Hero.astro';
 import Projects from '../../components/Projects.astro';
 import WorkExperience from '../../components/WorkExperience.astro';
+import Skills from '../../components/Skills.astro';
 import Contact from '../../components/Contact.astro';
 import Layout from '../../layouts/Layout.astro';
 ---
@@ -11,6 +12,7 @@ import Layout from '../../layouts/Layout.astro';
     <Hero />
     <WorkExperience />
     <Projects />
+    <Skills />
     <Contact />
   </main>
 </Layout>
