--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,9 +9,12 @@ const t = useTranslations(lang);
   class="flex justify-around flex-col py-10 mt-1 md:mt-10 gap-10"
   id="home"
 >
-  <h1 class="font-mono text-2xl xl:text-4xl text-center lg:text-left">
+  <h1 class="font-bold text-2xl xl:text-4xl text-center lg:text-left">
     {t('hero.hello')}
-    <span class="text-cyan-200">Fede Parrilla</span>, <br />{t('hero.job')}
+    <span
+      class="bg-gradient-to-r from-cyan-100 to-cyan-400 text-transparent bg-clip-text tracking-wide"
+      >Fede Parrilla</span
+    >, <br />{t('hero.job')}
   </h1>
 
   <div class="flex flex-col justify-center items-center lg:flex-row gap-10">
