[add] href to all links + change fonts

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -24,12 +24,14 @@ const rrss = [
 ---
 
 <section class="pt-10 mb-10 flex flex-col gap-12" id="contact">
-  <h2 class="font-mono text-2xl text-cyan-200 text-center lg:text-start">
+  <h2
+    class="font-mono font-semibold text-xl text-cyan-200 text-center lg:text-start"
+  >
     💬 {t('contact.title')}
   </h2>
   <section class="flex justify-center lg:justify-start items-center gap-10">
     <div
-      class="flex flex-row gap-10 items-center justify-center lg:items-start lg:justify-start"
+      class="flex flex-row gap-10 items-center justify-center lg:items-start lg:justify-start font-semibold"
     >
       {
         rrss.map((rrss) => {
