--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -9,10 +9,10 @@ const t = useTranslations(lang);
   class="flex justify-around flex-col py-10 mt-1 md:mt-10 gap-10"
   id="home"
 >
-  <h1 class="font-bold text-2xl xl:text-4xl text-center lg:text-left">
+  <h1 class="font-bold text-2xl md:text-4xl text-center lg:text-left">
     {t('hero.hello')}
     <span
-      class="bg-gradient-to-r from-cyan-100 to-cyan-400 text-transparent bg-clip-text tracking-wide"
+      class="bg-gradient-to-r from-cyan-300 to-cyan-200 text-transparent bg-clip-text tracking-wide"
       >Fede Parrilla</span
     >, <br />{t('hero.job')}
   </h1>
@@ -24,11 +24,22 @@ const t = useTranslations(lang);
       </p>
 
       <div
-        class="flex flex-row w-12 gap-4 items-center justify-center lg:items-start lg:justify-start"
+        class="flex flex-row w-12 gap-5 items-center justify-center lg:items-start lg:justify-start"
       >
-        <i class="fa-brands fa-github text-[2.7rem]"></i>
-        <i class="fa-brands fa-linkedin text-[2.7rem]"></i>
-        <i class="fa-regular fa-file text-[2.7rem]"></i>
+        <a href="https://github.com/fedeparrilla10" target="_blank">
+          <i class="fa-brands fa-github text-[2.7rem]"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/fedeparrilla/" target="_blank">
+          <i class="fa-brands fa-linkedin text-[2.7rem]"></i>
+        </a>
+        <a
+          href={lang === 'en'
+            ? '/portfolio/FedeParrillaENG.pdf'
+            : '/portfolio/FedeParrillaESP.pdf'}
+          target="_blank"
+        >
+          <i class="fa-solid fa-file text-[2.7rem]"></i>
+        </a>
       </div>
     </div>
     <img
