--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -18,7 +18,9 @@ const linkButtons = [
 ---
 
 <section class="pt-10 mb-10 flex flex-col gap-12" id="projects">
-  <h2 class="font-mono text-2xl text-cyan-200 text-center lg:text-start">
+  <h2
+    class="font-mono font-semibold text-xl text-cyan-200 text-center lg:text-start"
+  >
     🚀 {t('projects.title')}
   </h2>
 
@@ -27,7 +29,7 @@ const linkButtons = [
       allProjects.map((project) => (
         <div class="flex flex-col lg:flex-row gap-4 lg:gap-10">
           <img
-            class="rounded-xl lg:w-2/5 lg:h-64 lg:object-cover lg:object-top"
+            class="rounded-3xl lg:w-2/5 lg:h-64 lg:object-cover lg:object-top hover:animate-"
             src={project.img}
             alt={project.name}
           />
@@ -40,7 +42,7 @@ const linkButtons = [
                     <div
                       class={`${tech.class} flex flex-row text-sm items-center gap-1 border-gray-200 rounded-lg px-3 py-[0.20rem] cursor-default`}
                     >
-                      <img src={tech.img} class="w-5" />
+                      <img src={tech.img} class="w-5" alt={tech.name} />
                       <p>{tech.name}</p>
                     </div>
                   );
@@ -54,11 +56,14 @@ const linkButtons = [
               {linkButtons.map((button) => {
                 return (
                   <a
-                    href="#"
+                    href={
+                      button.name === 'Preview' ? project.preview : project.code
+                    }
+                    target="_blank"
                     class="flex flex-row items-center gap-2 rounded-xl px-3 py-2 bg-slate-900 hover:bg-slate-800"
                   >
                     <i class={button.icon} />
-                    <p class="">{button.name}</p>
+                    <p>{button.name}</p>
                   </a>
                 );
               })}
