--- a/src/components/WorkExperience.astro
+++ b/src/components/WorkExperience.astro
@@ -6,7 +6,9 @@ const t = useTranslations(lang);
 ---
 
 <section class="pt-10 mb-10 flex flex-col gap-12" id="work-experience">
-  <h2 class="font-mono text-2xl text-cyan-200 text-center lg:text-start">
+  <h2
+    class="font-mono font-semibold text-xl text-cyan-200 text-center lg:text-start"
+  >
     💼 {t('work.title')}
   </h2>
 
