--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,9 +19,15 @@ const { title } = Astro.props;
     <script
       src="https://kit.fontawesome.com/d6da2f3f0d.js"
       crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body
-    class="mx-auto max-w-screen-lg px-5 font-sans text-white bg-gradient-to-b from-gray-900 to-gray-950 xs:text-[16px] md:text-[18px]"
+    class="mx-auto max-w-screen-lg px-5 font-main text-white bg-gradient-to-b from-gray-900 to-gray-950 xs:text-[16px] md:text-[18px]"
   >
     <NavBar />
     <slot />
