[update] navbar with skills section

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -19,6 +19,10 @@ const menuItems = [
     link: '#projects',
   },
   {
+    name: t('nav.skills'),
+    link: '#skills',
+  },
+  {
     name: t('nav.contact'),
     link: '#contact',
   },
